Overhauled the entire logic behind the arr views
